# hearth

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cubecl.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: compare_sdxl.rs  estimate_depth.rs  generate.rs  generate_xl.rs  gpu_info.rs
models/: download_sd15.py  download_sdxl.py
scripts/: convert_controlnet_diffusers.py  download_depth_anything.py  test_depth_ref.py
src/: lib.rs  main.rs  model_loader.rs  startup.rs  types.rs
src/clip/: attention.rs  conditioning.rs  config.rs  embeddings.rs  encoder.rs  layer.rs  mlp.rs  mod.rs  open_clip.rs  tokenizer.rs  transformer.rs
src/controlnet/: hint.rs  mod.rs  model.rs  output.rs
src/depth/: config.rs  decoder.rs  encoder.rs  mod.rs  model.rs
src/layers/: attention.rs  layer_norm.rs  linear.rs  mod.rs  resnet.rs  upsample.rs
src/lora/: mod.rs
src/model_manager/: error.rs  mod.rs  vram.rs
src/node/: context.rs  error.rs  executor.rs  handle.rs  mod.rs  value.rs  variant.rs
src/node/nodes/: checkpoint_loader.rs  clip_encode.rs  controlnet_apply.rs  controlnet_loader.rs  empty_latent.rs  ksampler.rs  ksampler_advanced.rs  lora_loader.rs  mod.rs  save_image.rs  vae_decode.rs  vae_encode.rs
src/sampling/: cfg.rs  dpm_pp_2m.rs  dpm_pp_sde.rs  euler.rs  euler_a.rs  mod.rs  sampler_kind.rs  scheduler.rs  scheduler_kind.rs
src/server/: error.rs  mod.rs  state.rs
src/server/a1111/: controlnet.rs  img2img.rs  interrupt.rs  mod.rs  models.rs  options.rs  progress.rs  samplers.rs  schedulers.rs  sysinfo.rs  txt2img.rs  types.rs  unload.rs  upscalers.rs  util.rs  vae.rs
src/server/comfyui/: history.rs  mod.rs  prompt.rs  queue.rs  types.rs  workflow.rs  ws.rs
src/unet/: attention.rs  config.rs  downsample.rs  embeddings.rs  mid_block.rs  mod.rs  model.rs  resnet.rs  transformer.rs
src/vae/: config.rs  decoder.rs  down_block.rs  encoder.rs  mid_block.rs  mod.rs  tests.rs  up_block.rs
tests/: bilinear_repro.rs  blackbox_attention_test.rs  dp4a_dot_test.rs  generate_comparison.rs  inspect_model.rs  int8_matmul_perf.rs  sage_attention_test.rs  server_comfyui.rs  server_endpoints.rs  server_txt2img.rs  tensor_ops.rs  unet_step_comparison.rs
tests/fixtures/: README.md  generate_fixtures.py  generate_sdxl_fixtures.py
tests/fixtures/comfyui/input/: txt2img_basic.json  txt2img_controlnet.json  txt2img_with_lora.json
tests/fixtures/comfyui/output/: ws_progress.json  ws_status.json
